// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Karma Package transformer should work with mocha configs 1`] = `
Object {
  "devDependencies": Object {
    "karma": "^3.0.0",
    "karma-chrome-launcher": "^2.2.0",
    "karma-firefox-launcher": "^1.1.0",
    "karma-mocha": "^1.3.0",
  },
  "greenkeeper": Object {
    "ignore": Array [
      "karma",
      "karma-chrome-launcher",
      "karma-firefox-launcher",
      "karma-mocha",
    ],
  },
  "metapak": Object {
    "configs": Array [
      "mocha",
      "karma",
    ],
    "data": Object {
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "scripts": Object {
    "karma": "karma start karma.conf.js",
    "test": " && npm run karma",
  },
}
`;

exports[`Karma Package transformer should work with some files 1`] = `
Object {
  "devDependencies": Object {
    "karma": "^3.0.0",
    "karma-chrome-launcher": "^2.2.0",
    "karma-firefox-launcher": "^1.1.0",
  },
  "greenkeeper": Object {
    "ignore": Array [
      "karma",
      "karma-chrome-launcher",
      "karma-firefox-launcher",
    ],
  },
  "metapak": Object {
    "configs": Array [
      "karma",
    ],
    "data": Object {
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "scripts": Object {
    "karma": "karma start karma.conf.js",
    "test": " && npm run karma",
  },
}
`;
